# Day-3-Lab-Chatbot-vs-react-agent

./: .env.example  main.py  pyproject.toml  run_agent.py  streamlit_app.py
data/: bus_schedules.json  mock_distances.json  operator_policies.json  operators.json
guide/: tools_description.md  workflow_description.md
report/group_report/: GROUP_REPORT_TEAM04_E402.md
report/individual_reports/: 2A202600064_Hoàng Đinh Duy Anh_INDIVIDUAL_REPORT.md  2A202600486_Nguyen Tien Huy Hoang_INDIVIDUAL_REPORT.md  REPORT_HOANG.md  REPORT_PROMPT_DESIGNER_C.md  REPORT_TRAN_NHAT_VI_2A202600497.md  TEMPLATE_INDIVIDUAL_REPORT.md
scripts/: generate_bus_data.py
src/agent/: agent.py  react_agent.py
src/core/: local_provider.py
src/telemetry/: loguru_logger.py
src/tools/: __init__.py  bus_tools.py  ride_tools.py
tests/: test_agent.py  test_tools.py
