[project]
name = "day-3-lab-chatbot-vs-react-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.5.0",
    "langchain>=1.2.15",
    "langchain-core>=1.2.26",
    "langchain-openai>=1.1.12",
    "langsmith>=0.7.25",
    "loguru>=0.7.3",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.56.0",
]
